@@ -1,4 +1,5 @@
 package com.smartTrade.backend.utils;
+
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -10,7 +11,7 @@ import java.util.Scanner;
 import java.io.FileOutputStream;
 import java.io.FileInputStream;
 
-public class PNGConverter{
+public class PNGConverter {
 
     public static String convertImageToBase64(String imagePath) {
         String base64Image = "";
@@ -24,32 +25,27 @@ public class PNGConverter{
         return "data:image/png;base64," + base64Image;
     }
 
-    public void base64ToImage(String base64Data, String outputPath) throws IOException {
-        // Guarde la cadena base64 en el archivo TXT porque la cadena es larga
-FileInputStream fis = new FileInputStream(dataDir + "base64.txt");
-String base64 = IOUtils.toString(fis, "UTF-8");
-String base64ImageString = base64.replace("data:image/png;base64,", "");
-byte[] imageBytes = javax.xml.bind.DatatypeConverter.parseBase64Binary(base64ImageString);
+    public void base64ToImage(String base64Data, String dataDir) throws IOException {
+        // Decodificar la cadena base64 pasada como parámetro
+        String base64ImageString = base64Data.replace("data:image/png;base64,", "");
+        byte[] imageBytes = Base64.getDecoder().decode(base64ImageString);
 
-// Convertir Base64 a imagen JPG o PNG
-FileOutputStream fos = new FileOutputStream(dataDir + "Base64 to Image.jpg");
-//FileOutputStream fos = new FileOutputStream(dataDir + "Base64 to Image.png");
-try {
-    fos.write(imageBytes);
-}
-finally {
-    fos.close();
-}
+        // Convertir Base64 a imagen JPG o PNG
+        try (FileOutputStream fos = new FileOutputStream(dataDir + "Base64 to Image.jpg")) {
+            fos.write(imageBytes);
+        }
     }
+    
 
-    public static void main(String[] args) throws IOException{
-        PNGConverter converter  = new PNGConverter();
+    public static void main(String[] args) throws IOException {
+        PNGConverter converter = new PNGConverter();
         String text = "";
         Scanner sc = new Scanner("./BASE64.txt");
-        while(sc.hasNextLine()){
+        while (sc.hasNextLine()) {
             String line = sc.nextLine();
-            text = text  + line + "\n";
+            text = text + line + "\n";
         }
-        converter.base64ToImage(text,"resultado");
+        sc.close();
+        
     }
 }
